syntax = "proto3";


message  UploadPost{
  message Request{
    string title = 1;
    string content = 2;
    bytes  picture_blob = 3;
  }
  message  Response {
    bool success = 1;
  }
}

message FetchPostDetails{
  message Request{
    int32 post_id = 1;
  }
  message Response{
    bool  success = 1;
    string title = 2;
    string content = 3;
    bytes pictureBlob = 4;
  }
}

message FetchKPostIds{
  message Request{
    int32 k = 1;
  }
  message Response{
    repeated int32 id = 1;

  }
}

//rpcs
service PostService{
  rpc uploadPost(UploadPost.Request) returns (UploadPost.Response) {}
  rpc fetchPostDetails(FetchPostDetails.Request) returns (FetchPostDetails.Response) {}
  rpc fetchPosts(FetchKPostIds.Request) returns (FetchKPostIds.Response){}
}